[TRUNK]  + Added support for native menus and example.  + Added new types "intptr_t".  * Added and fixed some documentation.

--- a/TRUNK/lib/allegro5.cfg
+++ b/TRUNK/lib/allegro5.cfg
@@ -32,17 +32,20 @@
 }
       {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
     {$ENDIF}
+  {$ELSE IF NOT DEFINED(WINDOWS)}
+    {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
   {$ENDIF}
 { Sets dialect. }
   {$IF NOT DEFINED(FPC_DELPHI)}
     {$MODE DELPHI}
   {$ENDIF}
-  {$LONGSTRINGS ON }
+  {$MACRO ON}
+  {$LONGSTRINGS ON}
   {$PACKRECORDS C}
   {$PACKENUM 4}
   {$IFNDEF DEBUGMODE}
-    {$SMARTLINK ON}
-    {$INLINE ON}
+    {$SMARTLINK OFF}
+    {$INLINE OFF}
   {$ENDIF}
 {$ENDIF}
 
