[TRUNK]  * Fixed functions al_append_menu_item and al_insert_menu_item,    so they receibe a pointer to a string instead of a STRING.    This was a problem in my WindowsXP 32bit, as it finished    with a Segmentation Fault.  * Fixed Windows detection in allegro5.cfg.

--- a/TRUNK/lib/allegro5.cfg
+++ b/TRUNK/lib/allegro5.cfg
@@ -32,8 +32,10 @@
 }
       {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
     {$ENDIF}
-  {$ELSE IF NOT DEFINED(WINDOWS)}
-    {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
+  {$ELSE}
+    {$IFNDEF WINDOWS}
+      {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
+    {$ENDIF}
   {$ENDIF}
 { Sets dialect. }
   {$IF NOT DEFINED(FPC_DELPHI)}
