--- a/TRUNK/lib/allegro5.cfg
+++ b/TRUNK/lib/allegro5.cfg
@@ -46,7 +46,8 @@
   {$PACKRECORDS C}
   {$PACKENUM 4}
   {$IFNDEF DEBUGMODE}
-    {$SMARTLINK OFF}
+    {$SMARTLINK ON}
+  {$ELSE}
     {$INLINE OFF}
   {$ENDIF}
 {$ENDIF}
