Commit to sync with SoruceForge's SVN #372 + Added "data.pas" to Furious Paladin. + Use of Try-except for error handling in Furious Paladin. * Some small updates to examples/common.pas. + Added TTheme, TSaveState and TUstring classes to examples/nihgui.pas.  Not   used yet. * Allegro links to Monolith version on Windows by default.  Use NO_MONOLITH to   use separated DLL addons insteadA * Delphi and Free Pascal specific compiler configuration moved from   allegro5.cfg to dcc.cfg and fpc.cfg. + Added ALLEGRO_TAU constant. * Modified and fixed al_load_bitmap_f and al_load_bitmap_flags_f. * Documentation fixes and updates.

--- a/TRUNK/demos/furiouspaladin/Lazarus/furiouspaladin.lpi
+++ b/TRUNK/demos/furiouspaladin/Lazarus/furiouspaladin.lpi
@@ -32,12 +32,17 @@
         <FormatVersion Value="1"/>
       </local>
     </RunParams>
-    <Units Count="1">
+    <Units Count="2">
       <Unit0>
         <Filename Value="../furiouspaladin.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="FuriousPaladin"/>
       </Unit0>
+      <Unit1>
+        <Filename Value="../data.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="Data"/>
+      </Unit1>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
