Commit to sync with SoruceForge's SVN #361.
  * Updated documentation, adding a lot of new documentation and fixed a lot other
    one.
  * Fixed the "veryclean" target of makefile.all.

--- a/TRUNK/makefile.all
+++ b/TRUNK/makefile.all
@@ -42,7 +42,7 @@ status: adbanner
 
 # Cleans everything.
 veryclean: clean
-	$(DELETE) $(EXMFILES
+	$(DELETE) $(EXMFILES)
 	$(DELETE) $(DEMFILES)
 
 # Clean temporary files.
