Allegro 5.2.beta.1 Release.

--- a/makefile.all
+++ b/makefile.all
@@ -1,19 +1,19 @@
-# Makefile generic - build rules
+# Makefile - build rules
 
 .PHONY: all demos examples docs
 
 # Main objective: the whole project
 all: adbanner examples demos
-	@echo "Finished $(PROJECT)."
-	@echo "To create the documentation, run 'make docs'."
+	@echo Finished $(PROJECT).
+	@echo To create the documentation, run 'make docs'.
 
 # Examples.
 examples: $(EXMFILES)
-	@echo "Finished all examples."
+	@echo Finished all examples.
 
 # Demonstration games.
 demos: $(DEMFILES)
-	@echo "Finished all demonstration games."
+	@echo Finished all demonstration games.
 
 # Executables
 $(EXMBIN)%$(BINSUF): $(EXMSRC)%$(MAINSUF) $(EXMSRC)common.pas $(LIBFILES)
@@ -34,15 +34,17 @@ docs: $(LIBFILES) $(DOCFILES)
 
 # Returns some variables.
 status: adbanner
-	@echo "-----------------"
-	@echo "- Status Report -"
-	@echo "-----------------"
-	@echo "  Project : $(PROJECT)"
-	@echo "  Platform : $(PLATFORM)"
-	@echo "  Compiler options : $(FLAGS) $(EFLAGS)"
-	@echo "  Library units : $(LIBFILES)"
-	@echo "  Examples : $(EXMFILES)"
-	@echo "  Demo games : $(DEMFILES)"
+	@echo -----------------
+	@echo - Status Report -
+	@echo -----------------
+	@echo Project : $(PROJECT)
+	@echo Platform : $(PLATFORM)
+	@echo Compiler options : $(FLAGS) $(EFLAGS)
+	@echo Library units : $(LIBFILES)
+	@echo
+	@echo Examples : $(EXMFILES)
+	@echo
+	@echo Demo games : $(DEMFILES)
 
 # Cleans everything.
 veryclean: clean
@@ -54,22 +56,22 @@ clean:
 	$(DELETE) $(OBJFILES)
 	$(DELETE) $(DOCTMPFILES)
 
-# Show all options.
+# Show options.
 help: adbanner
-	@echo "--------"
-	@echo "- Help -"
-	@echo "--------"
-	@echo "make all            } Builds the whole project."
-	@echo "make examples       } Builds the examples only."
-	@echo "make docs           } Builds internal documentation."
-	@echo "make clean          } Deletes temporary files."
-	@echo "make veryclean      } Deletes all builded files."
-	@echo "make status         } Shows some configuration variables."
-	@echo "make help           } Shows this help."
+	@echo --------
+	@echo - Help -
+	@echo --------
+	@echo "make all       } Builds the whole project."
+	@echo "make examples  } Builds the examples only."
+	@echo "make docs      } Builds internal documentation."
+	@echo "make clean     } Deletes temporary files."
+	@echo "make veryclean } Deletes all generated files."
+	@echo "make status    } Shows some configuration variables."
+	@echo "make help      } Shows this help."
 
 # Some info.
 adbanner:
-	@echo "$(PROJECT)"
-	@echo "(c) Guillermo Martínez J. 2006-2019"
-	@echo "http://allegro-pas.sourceforge.net"
+	@echo $(PROJECT)
+	@echo "(c) Guillermo Martínez J. 2006-2020"
+	@echo http://allegro-pas.sourceforge.net
 	@echo
