--- a/src/lib/dcc.cfg
+++ b/src/lib/dcc.cfg
@@ -49,5 +49,6 @@
 { We do NOT use H+ directive as it DOESN'T define STRING as ANSISTRING anymore!
   Instead, we define Delphi STRING as SHORTSTRING.  Note that RTL was compiled
   using UNICODESTRING so some incompatibility may appear.  Use stuff from unit
-  al5strings to avoid warnings and problems. }
+  al5strings to avoid warnings and problems.
+}
   {$H-}
