--- a/src/lib/fpc.cfg
+++ b/src/lib/fpc.cfg
@@ -11,16 +11,23 @@
 
 { Identify platform. }
   {$IFDEF UNIX}
-    {$IF DEFINED(DARWIN) OR DEFINED(QNX) OR DEFINED(BEOS)}
-{
-  This version wasn't tested on those systems.
-  May be you want to help porting it to other systems and compilers, won't you?
-}
+    {$IF DEFINED(DARWIN) OR DEFINED(MACOS)}
+      {$ERROR Allegro.pas doesn't work on Apple operating systems. }
+    {$ENDIF}
+    {$IF DEFINED(QNX) OR DEFINED(BEOS)}
       {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
     {$ENDIF}
   {$ELSE}
-    {$IFNDEF WINDOWS}
-      {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
+    {$IFDEF WINDOWS}
+      {$IF DEFINED(WIN16) OR DEFINED(WINCE)}
+        {$ERROR Allegro doesn't run on this Windows system.}
+      {$ENDIF}
+    {$ELSE}
+      {$IF DEFINED(MSDOS) OR DEFINED(OS2)}
+        {$ERROR Allegro doesn't run on this operating system anymore.}
+      {$ELSE}
+        {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
+      {$ENDIF}
     {$ENDIF}
   {$ENDIF}
 
