--- a/src/examples/lazarus/ex_16_audio_stream.lpi
+++ b/src/examples/lazarus/ex_16_audio_stream.lpi
@@ -12,7 +12,7 @@
         <CompatibilityMode Value="True"/>
       </Flags>
       <AutoCreateForms Value="False"/>
-      <Title Value="ex_18_window_multiple"/>
+      <Title Value="ex_16_audio_stream"/>
       <ResourceType Value="res"/>
     </General>
     <i18n>
@@ -24,7 +24,7 @@
         <CompilerOptions>
           <Version Value="11"/>
           <Target>
-            <Filename Value="../../../bin/examples/ex_18_window_multiple"/>
+            <Filename Value="../../../bin/examples/ex_16_audio_stream"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
@@ -70,27 +70,39 @@
     </RunParams>
     <Units Count="2">
       <Unit0>
-        <Filename Value="../ex_18_window_multiple.pas"/>
+        <Filename Value="../ex_16_audio_stream.pas"/>
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
-        <UsageCount Value="21"/>
+        <CursorPos X="49" Y="5"/>
+        <UsageCount Value="22"/>
         <Loaded Value="True"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit0>
       <Unit1>
         <Filename Value="../common.pas"/>
         <UnitName Value="Common"/>
-        <EditorIndex Value="-1"/>
-        <UsageCount Value="21"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="94"/>
+        <CursorPos Y="104"/>
+        <UsageCount Value="22"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit1>
     </Units>
-    <JumpHistory HistoryIndex="-1"/>
+    <JumpHistory Count="2" HistoryIndex="1">
+      <Position1>
+        <Filename Value="../ex_16_audio_stream.pas"/>
+        <Caret Line="118" Column="11" TopLine="107"/>
+      </Position1>
+      <Position2>
+        <Filename Value="../ex_16_audio_stream.pas"/>
+        <Caret Line="123" Column="21" TopLine="25"/>
+      </Position2>
+    </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="../../../bin/examples/ex_18_window_multiple"/>
+      <Filename Value="../../../bin/examples/ex_16_audio_stream"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
