--- a/src/examples/lazarus/ex_20_window_multiple.lpi
+++ b/src/examples/lazarus/ex_20_window_multiple.lpi
@@ -12,7 +12,7 @@
         <CompatibilityMode Value="True"/>
       </Flags>
       <AutoCreateForms Value="False"/>
-      <Title Value="ex_22_audio_mixer"/>
+      <Title Value="ex_20_window_multiple"/>
       <ResourceType Value="res"/>
     </General>
     <i18n>
@@ -24,7 +24,7 @@
         <CompilerOptions>
           <Version Value="11"/>
           <Target>
-            <Filename Value="../../../bin/examples/ex_22_audio_mixer"/>
+            <Filename Value="../../../bin/examples/ex_20_window_multiple"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
@@ -70,7 +70,7 @@
     </RunParams>
     <Units Count="2">
       <Unit0>
-        <Filename Value="../ex_22_audio_mixer.pas"/>
+        <Filename Value="../ex_20_window_multiple.pas"/>
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <UsageCount Value="21"/>
@@ -90,7 +90,7 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="../../../bin/examples/ex_22_audio_mixer"/>
+      <Filename Value="../../../bin/examples/ex_20_window_multiple"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
